// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application generator default apps should generate default app with "none" ui 1`] = `
{
  ".eslintignore": {
    "content": [
      "node_modules",
    ],
    "isBinary": false,
    "path": "./.eslintignore",
  },
  ".eslintrc.json": {
    "content": [
      "{",
      ""root": true,",
      ""ignorePatterns": ["**/*"],",
      ""plugins": ["@nx"],",
      ""overrides": [",
      "{",
      ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
      ""rules": {",
      ""@nx/enforce-module-boundaries": [",
      ""error",",
      "{",
      ""enforceBuildableLibDependency": true,",
      ""allow": [],",
      ""depConstraints": [",
      "{",
      ""sourceTag": "*",",
      ""onlyDependOnLibsWithTags": ["*"]",
      "}",
      "]",
      "}",
      "]",
      "}",
      "},",
      "{",
      ""files": ["*.ts", "*.tsx"],",
      ""extends": ["plugin:@nx/typescript"],",
      ""rules": {}",
      "},",
      "{",
      ""files": ["*.js", "*.jsx"],",
      ""extends": ["plugin:@nx/javascript"],",
      ""rules": {}",
      "}",
      "]",
      "}",
    ],
    "isBinary": false,
    "path": "./.eslintrc.json",
  },
  ".prettierignore": {
    "content": [
      "# Add files here to ignore them from prettier formatting",
      "/dist",
      "/coverage",
      "/.nx/cache",
      ".anchor",
      "target",
      "node_modules",
      "dist",
      "tmp",
      "build",
      "test-ledger",
    ],
    "isBinary": false,
    "path": "./.prettierignore",
  },
  ".prettierrc": {
    "content": [
      "{ "singleQuote": true }",
    ],
    "isBinary": false,
    "path": "./.prettierrc",
  },
  "anchor": {
    "children": {
      ".eslintrc.json": {
        "content": [
          "{",
          ""extends": ["../.eslintrc.json"],",
          ""ignorePatterns": ["!**/*"],",
          ""overrides": [",
          "{",
          ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.js", "*.jsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.json"],",
          ""parser": "jsonc-eslint-parser",",
          ""rules": {",
          ""@nx/dependency-checks": [",
          ""error",",
          "{",
          ""ignoredFiles": ["{projectRoot}/rollup.config.{js,ts,mjs,mts}"]",
          "}",
          "]",
          "}",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/.eslintrc.json",
      },
      ".swcrc": {
        "content": [
          "{",
          ""jsc": {",
          ""target": "es2017",",
          ""parser": {",
          ""syntax": "typescript",",
          ""decorators": true,",
          ""dynamicImport": true",
          "},",
          ""transform": {",
          ""decoratorMetadata": true,",
          ""legacyDecorator": true",
          "},",
          ""keepClassNames": true,",
          ""externalHelpers": true,",
          ""loose": true",
          "},",
          ""module": {",
          ""type": "es6"",
          "},",
          ""sourceMaps": true,",
          ""exclude": [",
          ""jest.config.ts",",
          "".*\\\\.spec.tsx?$",",
          "".*\\\\.test.tsx?$",",
          ""./src/jest-setup.ts$",",
          ""./**/jest-setup.ts$",",
          "".*.js$"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/.swcrc",
      },
      "Anchor.toml": {
        "content": [
          "[features]",
          "seeds = false",
          "skip-lint = false",
          "[programs.localnet]",
          "counter = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
          "[registry]",
          "url = "https://api.apr.dev"",
          "[provider]",
          "cluster = "Localnet"",
          "wallet = "~/.config/solana/id.json"",
          "[scripts]",
          "test = "../node_modules/.bin/nx run anchor:jest"",
        ],
        "isBinary": false,
        "path": "./anchor/Anchor.toml",
      },
      "Cargo.lock": {
        "content": null,
        "isBinary": true,
        "path": "./anchor/Cargo.lock",
      },
      "Cargo.toml": {
        "content": [
          "[workspace]",
          "members = [",
          ""programs/*"",
          "]",
          "resolver = "2"",
          "[profile.release]",
          "overflow-checks = true",
          "lto = "fat"",
          "codegen-units = 1",
          "[profile.release.build-override]",
          "opt-level = 3",
          "incremental = false",
          "codegen-units = 1",
        ],
        "isBinary": false,
        "path": "./anchor/Cargo.toml",
      },
      "README.md": {
        "content": [
          "# anchor",
          "This library was generated with [Nx](https://nx.dev).",
          "## Building",
          "Run \`nx build anchor\` to build the library.",
          "## Running unit tests",
          "Run \`nx test anchor\` to execute the unit tests via [Jest](https://jestjs.io).",
        ],
        "isBinary": false,
        "path": "./anchor/README.md",
      },
      "jest.config.ts": {
        "content": [
          "/* eslint-disable */",
          "import { readFileSync } from 'fs';",
          "// Reading the SWC compilation config and remove the "exclude"",
          "// for the test files to be compiled by SWC",
          "const { exclude: _, ...swcJestConfig } = JSON.parse(",
          "readFileSync(\`\${__dirname}/.swcrc\`, 'utf-8')",
          ");",
          "// disable .swcrc look-up by SWC core because we're passing in swcJestConfig ourselves.",
          "// If we do not disable this, SWC Core will read .swcrc and won't transform our test files due to "exclude"",
          "if (swcJestConfig.swcrc === undefined) {",
          "swcJestConfig.swcrc = false;",
          "}",
          "// Uncomment if using global setup/teardown files being transformed via swc",
          "// https://nx.dev/packages/jest/documents/overview#global-setup/teardown-with-nx-libraries",
          "// jest needs EsModule Interop to find the default exported setup/teardown functions",
          "// swcJestConfig.module.noInterop = false;",
          "export default {",
          "displayName: 'anchor',",
          "preset: '../jest.preset.js',",
          "transform: {",
          "'^.+\\\\.[tj]s$': ['@swc/jest', swcJestConfig],",
          "},",
          "moduleFileExtensions: ['ts', 'js', 'html'],",
          "testEnvironment: '',",
          "coverageDirectory: '../coverage/anchor',",
          "};",
        ],
        "isBinary": false,
        "path": "./anchor/jest.config.ts",
      },
      "migrations": {
        "children": {
          "deploy.ts": {
            "content": [
              "// Migrations are an early feature. Currently, they're nothing more than this",
              "// single deploy script that's invoked from the CLI, injecting a provider",
              "// configured from the workspace's Anchor.toml.",
              "const anchor = require('@coral-xyz/anchor');",
              "module.exports = async function (provider) {",
              "// Configure client to use the provider.",
              "anchor.setProvider(provider);",
              "// Add your deploy script here.",
              "};",
            ],
            "isBinary": false,
            "path": "./anchor/migrations/deploy.ts",
          },
        },
        "path": "./anchor/migrations",
      },
      "package.json": {
        "content": [
          "{",
          ""name": "@proj/anchor",",
          ""version": "0.0.1",",
          ""dependencies": {},",
          ""type": "commonjs",",
          ""main": "./index.cjs",",
          ""module": "./index.js"",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/package.json",
      },
      "programs": {
        "children": {
          "counter": {
            "children": {
              "Cargo.toml": {
                "content": [
                  "[package]",
                  "name = "counter"",
                  "version = "0.1.0"",
                  "description = "Created with Anchor"",
                  "edition = "2021"",
                  "[lib]",
                  "crate-type = ["cdylib", "lib"]",
                  "name = "counter"",
                  "[features]",
                  "no-entrypoint = []",
                  "no-idl = []",
                  "no-log-ix-name = []",
                  "cpi = ["no-entrypoint"]",
                  "default = []",
                  "[dependencies]",
                  "anchor-lang = "0.28.0"",
                ],
                "isBinary": false,
                "path": "./anchor/programs/counter/Cargo.toml",
              },
              "Xargo.toml": {
                "content": [
                  "[target.bpfel-unknown-unknown.dependencies.std]",
                  "features = []",
                ],
                "isBinary": false,
                "path": "./anchor/programs/counter/Xargo.toml",
              },
              "src": {
                "children": {
                  "lib.rs": {
                    "content": [
                      "#![allow(clippy::result_large_err)]",
                      "use anchor_lang::prelude::*;",
                      "declare_id!("EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8");",
                      "#[program]",
                      "pub mod counter {",
                      "use super::*;",
                      "pub fn initialize_counter(_ctx: Context<InitializeCounter>) -> Result<()> {",
                      "Ok(())",
                      "}",
                      "pub fn increment(ctx: Context<Increment>) -> Result<()> {",
                      "ctx.accounts.counter.count = ctx.accounts.counter.count.checked_add(1).unwrap();",
                      "Ok(())",
                      "}",
                      "}",
                      "#[derive(Accounts)]",
                      "pub struct InitializeCounter<'info> {",
                      "#[account(mut)]",
                      "pub payer: Signer<'info>,",
                      "#[account(",
                      "init,",
                      "space = 8 + Counter::INIT_SPACE,",
                      "payer = payer",
                      ")]",
                      "pub counter: Account<'info, Counter>,",
                      "pub system_program: Program<'info, System>,",
                      "}",
                      "#[derive(Accounts)]",
                      "pub struct Increment<'info> {",
                      "#[account(mut)]",
                      "pub counter: Account<'info, Counter>,",
                      "}",
                      "#[account]",
                      "#[derive(InitSpace)]",
                      "pub struct Counter {",
                      "count: u64,",
                      "}",
                    ],
                    "isBinary": false,
                    "path": "./anchor/programs/counter/src/lib.rs",
                  },
                },
                "path": "./anchor/programs/counter/src",
              },
            },
            "path": "./anchor/programs/counter",
          },
        },
        "path": "./anchor/programs",
      },
      "project.json": {
        "content": [
          "{",
          ""name": "anchor",",
          ""$schema": "../node_modules/nx/schemas/project-schema.json",",
          ""sourceRoot": "anchor/src",",
          ""projectType": "library",",
          ""targets": {",
          ""build": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor build"],",
          ""parallel": false",
          "}",
          "},",
          ""lint": {",
          ""executor": "@nx/eslint:lint",",
          ""outputs": ["{options.outputFile}"],",
          ""options": {",
          ""lintFilePatterns": ["anchor/**/*.ts", "anchor/package.json"]",
          "}",
          "},",
          ""test": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor test"],",
          ""parallel": false",
          "}",
          "},",
          ""clean": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor clean"],",
          ""parallel": false",
          "}",
          "},",
          ""deploy": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor deploy"],",
          ""parallel": false",
          "}",
          "},",
          ""localnet": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor localnet"],",
          ""parallel": false",
          "}",
          "},",
          ""publish": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor publish"],",
          ""parallel": false",
          "}",
          "},",
          ""jest": {",
          ""executor": "@nx/jest:jest",",
          ""outputs": ["{workspaceRoot}/coverage/{projectRoot}"],",
          ""options": {",
          ""jestConfig": "anchor/jest.config.ts",",
          ""passWithNoTests": true",
          "},",
          ""configurations": {",
          ""ci": {",
          ""ci": true,",
          ""codeCoverage": true",
          "}",
          "}",
          "}",
          "},",
          ""tags": []",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/project.json",
      },
      "src": {
        "children": {
          "index.ts": {
            "content": [
              "export * from '../target/types/counter';",
            ],
            "isBinary": false,
            "path": "./anchor/src/index.ts",
          },
        },
        "path": "./anchor/src",
      },
      "target": {
        "children": {
          "types": {
            "children": {
              "counter.ts": {
                "content": [
                  "export type Counter = {",
                  "version: '0.1.0';",
                  "name: 'counter';",
                  "instructions: [",
                  "{",
                  "name: 'initializeCounter';",
                  "accounts: [",
                  "{",
                  "name: 'payer';",
                  "isMut: true;",
                  "isSigner: true;",
                  "},",
                  "{",
                  "name: 'counter';",
                  "isMut: true;",
                  "isSigner: true;",
                  "},",
                  "{",
                  "name: 'systemProgram';",
                  "isMut: false;",
                  "isSigner: false;",
                  "}",
                  "];",
                  "args: [];",
                  "},",
                  "{",
                  "name: 'increment';",
                  "accounts: [",
                  "{",
                  "name: 'counter';",
                  "isMut: true;",
                  "isSigner: false;",
                  "}",
                  "];",
                  "args: [];",
                  "}",
                  "];",
                  "accounts: [",
                  "{",
                  "name: 'counter';",
                  "type: {",
                  "kind: 'struct';",
                  "fields: [",
                  "{",
                  "name: 'count';",
                  "type: 'u64';",
                  "}",
                  "];",
                  "};",
                  "}",
                  "];",
                  "};",
                  "export const IDL: Counter = {",
                  "version: '0.1.0',",
                  "name: 'counter',",
                  "instructions: [",
                  "{",
                  "name: 'initializeCounter',",
                  "accounts: [",
                  "{",
                  "name: 'payer',",
                  "isMut: true,",
                  "isSigner: true,",
                  "},",
                  "{",
                  "name: 'counter',",
                  "isMut: true,",
                  "isSigner: true,",
                  "},",
                  "{",
                  "name: 'systemProgram',",
                  "isMut: false,",
                  "isSigner: false,",
                  "},",
                  "],",
                  "args: [],",
                  "},",
                  "{",
                  "name: 'increment',",
                  "accounts: [",
                  "{",
                  "name: 'counter',",
                  "isMut: true,",
                  "isSigner: false,",
                  "},",
                  "],",
                  "args: [],",
                  "},",
                  "],",
                  "accounts: [",
                  "{",
                  "name: 'counter',",
                  "type: {",
                  "kind: 'struct',",
                  "fields: [",
                  "{",
                  "name: 'count',",
                  "type: 'u64',",
                  "},",
                  "],",
                  "},",
                  "},",
                  "],",
                  "};",
                ],
                "isBinary": false,
                "path": "./anchor/target/types/counter.ts",
              },
            },
            "path": "./anchor/target/types",
          },
        },
        "path": "./anchor/target",
      },
      "tests": {
        "children": {
          "counter.spec.ts": {
            "content": [
              "import * as anchor from '@coral-xyz/anchor';",
              "import { Program } from '@coral-xyz/anchor';",
              "import { Keypair } from '@solana/web3.js';",
              "import { Counter } from '../target/types/counter';",
              "describe('counter', () => {",
              "// Configure the client to use the local cluster.",
              "const provider = anchor.AnchorProvider.env();",
              "anchor.setProvider(provider);",
              "const payer = provider.wallet as anchor.Wallet;",
              "const program = anchor.workspace.Counter as Program<Counter>;",
              "// Generate a new keypair for the counter account",
              "const counterKeypair = new Keypair();",
              "it('Initialize Counter', async () => {",
              "await program.methods",
              ".initializeCounter()",
              ".accounts({",
              "counter: counterKeypair.publicKey,",
              "payer: payer.publicKey,",
              "})",
              ".signers([counterKeypair])",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(0);",
              "});",
              "it('Increment Counter', async () => {",
              "await program.methods",
              ".increment()",
              ".accounts({ counter: counterKeypair.publicKey })",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(1);",
              "});",
              "it('Increment Counter Again', async () => {",
              "await program.methods",
              ".increment()",
              ".accounts({ counter: counterKeypair.publicKey })",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(2);",
              "});",
              "});",
            ],
            "isBinary": false,
            "path": "./anchor/tests/counter.spec.ts",
          },
        },
        "path": "./anchor/tests",
      },
      "tsconfig.json": {
        "content": [
          "{",
          ""extends": "../tsconfig.base.json",",
          ""compilerOptions": {",
          ""module": "commonjs"",
          "},",
          ""files": [],",
          ""include": [],",
          ""references": [",
          "{",
          ""path": "./tsconfig.lib.json"",
          "},",
          "{",
          ""path": "./tsconfig.spec.json"",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.json",
      },
      "tsconfig.lib.json": {
        "content": [
          "{",
          ""extends": "./tsconfig.json",",
          ""compilerOptions": {",
          ""outDir": "../dist/out-tsc",",
          ""declaration": true,",
          ""types": ["node"]",
          "},",
          ""include": ["src/**/*.ts"],",
          ""exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.lib.json",
      },
      "tsconfig.spec.json": {
        "content": [
          "{",
          ""extends": "./tsconfig.json",",
          ""compilerOptions": {",
          ""outDir": "../dist/out-tsc",",
          ""module": "commonjs",",
          ""types": ["jest", "node"]",
          "},",
          ""include": [",
          ""jest.config.ts",",
          ""src/**/*.test.ts",",
          ""src/**/*.spec.ts",",
          ""src/**/*.d.ts"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.spec.json",
      },
    },
    "path": "./anchor",
  },
  "jest.config.ts": {
    "content": [
      "import { getJestProjects } from '@nx/jest';",
      "export default {",
      "projects: getJestProjects(),",
      "};",
    ],
    "isBinary": false,
    "path": "./jest.config.ts",
  },
  "jest.preset.js": {
    "content": [
      "const nxPreset = require('@nx/jest/preset').default;",
      "module.exports = { ...nxPreset };",
    ],
    "isBinary": false,
    "path": "./jest.preset.js",
  },
  "nx.json": {
    "content": [
      "{",
      ""affected": {",
      ""defaultBase": "main"",
      "},",
      ""targetDefaults": {",
      ""build": {",
      ""cache": true",
      "},",
      ""lint": {",
      ""cache": true,",
      ""inputs": [",
      ""default",",
      ""{workspaceRoot}/.eslintrc.json",",
      ""{workspaceRoot}/.eslintignore",",
      ""{workspaceRoot}/eslint.config.js"",
      "]",
      "},",
      ""test": {",
      ""cache": true,",
      ""inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]",
      "},",
      ""e2e": {",
      ""cache": true",
      "}",
      "},",
      ""generators": {",
      ""@nx/react": {",
      ""application": {",
      ""babel": true",
      "}",
      "},",
      ""@nx/next": {",
      ""application": {",
      ""style": "css",",
      ""linter": "eslint"",
      "}",
      "}",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./nx.json",
  },
  "package.json": {
    "content": [
      "{",
      ""name": "@proj/source",",
      ""dependencies": {",
      ""@coral-xyz/anchor": "^0.29.0",",
      ""@solana/wallet-adapter-base": "^0.9.23",",
      ""@solana/wallet-adapter-react": "^0.15.35",",
      ""@solana/wallet-adapter-react-ui": "^0.9.34",",
      ""@solana/wallet-adapter-solflare": "^0.6.28",",
      ""@solana/wallet-adapter-unsafe-burner": "^0.1.7",",
      ""@solana/web3.js": "1.87.2",",
      ""@swc/helpers": "~0.5.2",",
      ""bs58": "5.0.0",",
      ""encoding": "0.1.13",",
      ""next": "13.4.1",",
      ""react": "18.2.0",",
      ""react-dom": "18.2.0",",
      ""tslib": "^2.3.0"",
      "},",
      ""devDependencies": {",
      ""@nx/eslint": "17.0.3",",
      ""@nx/eslint-plugin": "17.0.3",",
      ""@nx/jest": "17.0.1",",
      ""@nx/js": "17.0.3",",
      ""@nx/next": "17.0.3",",
      ""@nx/react": "17.0.3",",
      ""@nx/rollup": "17.0.1",",
      ""@swc-node/register": "~1.6.7",",
      ""@swc/cli": "~0.1.62",",
      ""@swc/core": "~1.3.85",",
      ""@swc/jest": "0.2.20",",
      ""@testing-library/react": "14.0.0",",
      ""@types/jest": "^29.4.0",",
      ""@types/node": "18.14.2",",
      ""@types/react": "18.2.33",",
      ""@types/react-dom": "18.2.14",",
      ""@typescript-eslint/eslint-plugin": "^5.60.1",",
      ""@typescript-eslint/parser": "^5.60.1",",
      ""eslint": "~8.46.0",",
      ""eslint-config-next": "13.4.1",",
      ""eslint-config-prettier": "^9.0.0",",
      ""eslint-plugin-import": "2.27.5",",
      ""eslint-plugin-jsx-a11y": "6.7.1",",
      ""eslint-plugin-react": "7.32.2",",
      ""eslint-plugin-react-hooks": "4.6.0",",
      ""jest": "^29.4.1",",
      ""jest-environment-jsdom": "^29.4.1",",
      ""prettier": "^2.6.2",",
      ""ts-jest": "^29.1.0",",
      ""ts-node": "10.9.1",",
      ""typescript": "~5.1.3"",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./package.json",
  },
  "test-app": {
    "children": {
      ".eslintrc.json": {
        "content": [
          "{",
          ""extends": [",
          ""plugin:@nx/react-typescript",",
          ""next",",
          ""next/core-web-vitals",",
          ""../.eslintrc.json"",
          "],",
          ""ignorePatterns": ["!**/*", ".next/**/*"],",
          ""overrides": [",
          "{",
          ""files": ["*.*"],",
          ""rules": {",
          ""@next/next/no-html-link-for-pages": "off"",
          "}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
          ""rules": {",
          ""@next/next/no-html-link-for-pages": ["error", "test-app/pages"]",
          "}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.js", "*.jsx"],",
          ""rules": {}",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/.eslintrc.json",
      },
      "app": {
        "children": {
          "api": {
            "children": {
              "hello": {
                "children": {
                  "route.ts": {
                    "content": [
                      "export async function GET(request: Request) {",
                      "return new Response('Hello, from API!');",
                      "}",
                    ],
                    "isBinary": false,
                    "path": "./test-app/app/api/hello/route.ts",
                  },
                },
                "path": "./test-app/app/api/hello",
              },
            },
            "path": "./test-app/app/api",
          },
          "app-layout.tsx": {
            "content": [
              "'use client';",
              "import { ReactNode } from 'react';",
              "import Link from 'next/link';",
              "import dynamic from 'next/dynamic';",
              "const WalletMultiButton = dynamic(",
              "async () =>",
              "(await import('@solana/wallet-adapter-react-ui')).WalletMultiButton,",
              "{ ssr: false }",
              ");",
              "export function AppLayout({ children }: { children: ReactNode }) {",
              "const { pathname } = { pathname: '' };",
              "const pages = [",
              "{ label: 'Airdrop', path: '/airdrop' },",
              "{ label: 'Page 1', path: '/page-1' },",
              "{ label: 'Page 2', path: '/page-2' },",
              "];",
              "return (",
              "<div>",
              "<div>",
              "<div>",
              "<Link href="/">@solana-developers/preset-next</Link>",
              "<ul>",
              "{pages.map(({ label, path }) => (",
              "<li key={path}>",
              "<Link href={path}>{label}</Link>",
              "</li>",
              "))}",
              "</ul>",
              "</div>",
              "<div>",
              "<WalletMultiButton />",
              "</div>",
              "</div>",
              "<div>{children}</div>",
              "<footer>",
              "<aside>",
              "<p>Generated with @solana-developers/preset-next@0.0.1</p>",
              "</aside>",
              "</footer>",
              "</div>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/app-layout.tsx",
          },
          "global.css": {
            "content": [
              "html,",
              "body {",
              "height: 100%;",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/global.css",
          },
          "layout.tsx": {
            "content": [
              "import './global.css';",
              "import { AppLayout } from './app-layout';",
              "import { SolanaProvider } from './solana-provider';",
              "export const metadata = {",
              "title: 'Welcome to test-app',",
              "description: 'Generated by @solana-developers/preset-next@0.0.1',",
              "};",
              "export default function RootLayout({",
              "children,",
              "}: {",
              "children: React.ReactNode;",
              "}) {",
              "return (",
              "<html lang="en">",
              "<body>",
              "<SolanaProvider>",
              "<AppLayout>{children}</AppLayout>",
              "</SolanaProvider>",
              "</body>",
              "</html>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/layout.tsx",
          },
          "page.module.css": {
            "content": [
              ".page {",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/page.module.css",
          },
          "page.tsx": {
            "content": [
              "import { IDL } from '@proj/anchor';",
              "export default async function Index() {",
              "return (",
              "<div>",
              "<pre>{JSON.stringify(IDL, null, 2)}</pre>",
              "</div>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/page.tsx",
          },
          "solana-provider.tsx": {
            "content": [
              "'use client';",
              "import { WalletError } from '@solana/wallet-adapter-base';",
              "import {",
              "ConnectionProvider,",
              "WalletProvider,",
              "} from '@solana/wallet-adapter-react';",
              "import { WalletModalProvider } from '@solana/wallet-adapter-react-ui';",
              "import { SolflareWalletAdapter } from '@solana/wallet-adapter-solflare';",
              "import { UnsafeBurnerWalletAdapter } from '@solana/wallet-adapter-unsafe-burner';",
              "import { Cluster, clusterApiUrl } from '@solana/web3.js';",
              "import {",
              "createContext,",
              "ReactNode,",
              "useCallback,",
              "useContext,",
              "useMemo,",
              "useState,",
              "} from 'react';",
              "require('@solana/wallet-adapter-react-ui/styles.css');",
              "export interface SolanaProviderContext {",
              "cluster: Cluster;",
              "endpoint: string;",
              "setCluster?: (cluster: Cluster) => void;",
              "}",
              "const Context = createContext<SolanaProviderContext>(",
              "{} as SolanaProviderContext",
              ");",
              "export function SolanaProvider({ children }: { children: ReactNode }) {",
              "const [cluster, setCluster] = useState<Cluster>('devnet');",
              "const endpoint = useMemo(() => clusterApiUrl(cluster), [cluster]);",
              "const wallets = useMemo(",
              "() => [new UnsafeBurnerWalletAdapter(), new SolflareWalletAdapter()],",
              "[cluster]",
              ");",
              "const onError = useCallback((error: WalletError) => {",
              "console.error(error);",
              "}, []);",
              "const value: SolanaProviderContext = {",
              "cluster,",
              "endpoint,",
              "setCluster,",
              "};",
              "return (",
              "<ConnectionProvider endpoint={endpoint}>",
              "<WalletProvider wallets={wallets} onError={onError} autoConnect={true}>",
              "<WalletModalProvider>",
              "<Context.Provider value={value}>{children}</Context.Provider>",
              "</WalletModalProvider>",
              "</WalletProvider>",
              "</ConnectionProvider>",
              ");",
              "}",
              "export function useSolana() {",
              "return useContext(Context);",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/solana-provider.tsx",
          },
        },
        "path": "./test-app/app",
      },
      "index.d.ts": {
        "content": [
          "/* eslint-disable @typescript-eslint/no-explicit-any */",
          "declare module '*.svg' {",
          "const content: any;",
          "export const ReactComponent: any;",
          "export default content;",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/index.d.ts",
      },
      "next-env.d.ts": {
        "content": [
          "/// <reference types="next" />",
          "/// <reference types="next/image-types/global" />",
          "// NOTE: This file should not be edited",
          "// see https://nextjs.org/docs/basic-features/typescript for more information.",
        ],
        "isBinary": false,
        "path": "./test-app/next-env.d.ts",
      },
      "next.config.js": {
        "content": [
          "//@ts-check",
          "// eslint-disable-next-line @typescript-eslint/no-var-requires",
          "const { composePlugins, withNx } = require('@nx/next');",
          "/**",
          "* @type {import('@nx/next/plugins/with-nx').WithNxOptions}",
          "**/",
          "const nextConfig = {",
          "nx: {",
          "// Set this to true if you would like to use SVGR",
          "// See: https://github.com/gregberge/svgr",
          "svgr: false,",
          "},",
          "};",
          "const plugins = [",
          "// Add more Next.js plugins to this list if needed.",
          "withNx,",
          "];",
          "module.exports = composePlugins(...plugins)(nextConfig);",
        ],
        "isBinary": false,
        "path": "./test-app/next.config.js",
      },
      "project.json": {
        "content": [
          "{",
          ""name": "test-app",",
          ""$schema": "../node_modules/nx/schemas/project-schema.json",",
          ""sourceRoot": "test-app",",
          ""projectType": "application",",
          ""targets": {",
          ""build": {",
          ""executor": "@nx/next:build",",
          ""outputs": ["{options.outputPath}"],",
          ""defaultConfiguration": "production",",
          ""options": {",
          ""outputPath": "dist/test-app"",
          "},",
          ""configurations": {",
          ""development": {",
          ""outputPath": "test-app"",
          "},",
          ""production": {}",
          "}",
          "},",
          ""serve": {",
          ""executor": "@nx/next:server",",
          ""defaultConfiguration": "development",",
          ""options": {",
          ""buildTarget": "test-app:build",",
          ""dev": true,",
          ""port": 3000",
          "},",
          ""configurations": {",
          ""development": {",
          ""buildTarget": "test-app:build:development",",
          ""dev": true",
          "},",
          ""production": {",
          ""buildTarget": "test-app:build:production",",
          ""dev": false",
          "}",
          "}",
          "},",
          ""export": {",
          ""executor": "@nx/next:export",",
          ""options": {",
          ""buildTarget": "test-app:build:production"",
          "}",
          "},",
          ""lint": {",
          ""executor": "@nx/eslint:lint",",
          ""outputs": ["{options.outputFile}"],",
          ""options": {",
          ""lintFilePatterns": ["test-app/**/*.{ts,tsx,js,jsx}"]",
          "}",
          "}",
          "},",
          ""tags": []",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/project.json",
      },
      "public": {
        "children": {
          ".gitkeep": {
            "content": [],
            "isBinary": false,
            "path": "./test-app/public/.gitkeep",
          },
          "favicon.ico": {
            "content": null,
            "isBinary": true,
            "path": "./test-app/public/favicon.ico",
          },
          "solana-logo.png": {
            "content": null,
            "isBinary": true,
            "path": "./test-app/public/solana-logo.png",
          },
        },
        "path": "./test-app/public",
      },
      "tsconfig.json": {
        "content": [
          "{",
          ""extends": "../tsconfig.base.json",",
          ""compilerOptions": {",
          ""jsx": "preserve",",
          ""allowJs": true,",
          ""esModuleInterop": true,",
          ""allowSyntheticDefaultImports": true,",
          ""strict": true,",
          ""forceConsistentCasingInFileNames": true,",
          ""noEmit": true,",
          ""resolveJsonModule": true,",
          ""isolatedModules": true,",
          ""incremental": true,",
          ""plugins": [{ "name": "next" }]",
          "},",
          ""include": [",
          ""**/*.ts",",
          ""**/*.tsx",",
          ""**/*.js",",
          ""**/*.jsx",",
          ""../test-app/.next/types/**/*.ts",",
          ""../dist/test-app/.next/types/**/*.ts",",
          ""next-env.d.ts"",
          "],",
          ""exclude": [",
          ""node_modules",",
          ""jest.config.ts",",
          ""src/**/*.spec.ts",",
          ""src/**/*.test.ts"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/tsconfig.json",
      },
    },
    "path": "./test-app",
  },
  "tsconfig.base.json": {
    "content": [
      "{",
      ""compilerOptions": {",
      ""paths": {",
      ""@proj/anchor": ["anchor/src/index.ts"]",
      "}",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./tsconfig.base.json",
  },
}
`;

exports[`application generator default apps should generate default app with "tailwind" ui 1`] = `
{
  ".eslintignore": {
    "content": [
      "node_modules",
    ],
    "isBinary": false,
    "path": "./.eslintignore",
  },
  ".eslintrc.json": {
    "content": [
      "{",
      ""root": true,",
      ""ignorePatterns": ["**/*"],",
      ""plugins": ["@nx"],",
      ""overrides": [",
      "{",
      ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
      ""rules": {",
      ""@nx/enforce-module-boundaries": [",
      ""error",",
      "{",
      ""enforceBuildableLibDependency": true,",
      ""allow": [],",
      ""depConstraints": [",
      "{",
      ""sourceTag": "*",",
      ""onlyDependOnLibsWithTags": ["*"]",
      "}",
      "]",
      "}",
      "]",
      "}",
      "},",
      "{",
      ""files": ["*.ts", "*.tsx"],",
      ""extends": ["plugin:@nx/typescript"],",
      ""rules": {}",
      "},",
      "{",
      ""files": ["*.js", "*.jsx"],",
      ""extends": ["plugin:@nx/javascript"],",
      ""rules": {}",
      "}",
      "]",
      "}",
    ],
    "isBinary": false,
    "path": "./.eslintrc.json",
  },
  ".prettierignore": {
    "content": [
      "# Add files here to ignore them from prettier formatting",
      "/dist",
      "/coverage",
      "/.nx/cache",
      ".anchor",
      "target",
      "node_modules",
      "dist",
      "tmp",
      "build",
      "test-ledger",
    ],
    "isBinary": false,
    "path": "./.prettierignore",
  },
  ".prettierrc": {
    "content": [
      "{ "singleQuote": true }",
    ],
    "isBinary": false,
    "path": "./.prettierrc",
  },
  "anchor": {
    "children": {
      ".eslintrc.json": {
        "content": [
          "{",
          ""extends": ["../.eslintrc.json"],",
          ""ignorePatterns": ["!**/*"],",
          ""overrides": [",
          "{",
          ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.js", "*.jsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.json"],",
          ""parser": "jsonc-eslint-parser",",
          ""rules": {",
          ""@nx/dependency-checks": [",
          ""error",",
          "{",
          ""ignoredFiles": ["{projectRoot}/rollup.config.{js,ts,mjs,mts}"]",
          "}",
          "]",
          "}",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/.eslintrc.json",
      },
      ".swcrc": {
        "content": [
          "{",
          ""jsc": {",
          ""target": "es2017",",
          ""parser": {",
          ""syntax": "typescript",",
          ""decorators": true,",
          ""dynamicImport": true",
          "},",
          ""transform": {",
          ""decoratorMetadata": true,",
          ""legacyDecorator": true",
          "},",
          ""keepClassNames": true,",
          ""externalHelpers": true,",
          ""loose": true",
          "},",
          ""module": {",
          ""type": "es6"",
          "},",
          ""sourceMaps": true,",
          ""exclude": [",
          ""jest.config.ts",",
          "".*\\\\.spec.tsx?$",",
          "".*\\\\.test.tsx?$",",
          ""./src/jest-setup.ts$",",
          ""./**/jest-setup.ts$",",
          "".*.js$"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/.swcrc",
      },
      "Anchor.toml": {
        "content": [
          "[features]",
          "seeds = false",
          "skip-lint = false",
          "[programs.localnet]",
          "counter = "EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8"",
          "[registry]",
          "url = "https://api.apr.dev"",
          "[provider]",
          "cluster = "Localnet"",
          "wallet = "~/.config/solana/id.json"",
          "[scripts]",
          "test = "../node_modules/.bin/nx run anchor:jest"",
        ],
        "isBinary": false,
        "path": "./anchor/Anchor.toml",
      },
      "Cargo.lock": {
        "content": null,
        "isBinary": true,
        "path": "./anchor/Cargo.lock",
      },
      "Cargo.toml": {
        "content": [
          "[workspace]",
          "members = [",
          ""programs/*"",
          "]",
          "resolver = "2"",
          "[profile.release]",
          "overflow-checks = true",
          "lto = "fat"",
          "codegen-units = 1",
          "[profile.release.build-override]",
          "opt-level = 3",
          "incremental = false",
          "codegen-units = 1",
        ],
        "isBinary": false,
        "path": "./anchor/Cargo.toml",
      },
      "README.md": {
        "content": [
          "# anchor",
          "This library was generated with [Nx](https://nx.dev).",
          "## Building",
          "Run \`nx build anchor\` to build the library.",
          "## Running unit tests",
          "Run \`nx test anchor\` to execute the unit tests via [Jest](https://jestjs.io).",
        ],
        "isBinary": false,
        "path": "./anchor/README.md",
      },
      "jest.config.ts": {
        "content": [
          "/* eslint-disable */",
          "import { readFileSync } from 'fs';",
          "// Reading the SWC compilation config and remove the "exclude"",
          "// for the test files to be compiled by SWC",
          "const { exclude: _, ...swcJestConfig } = JSON.parse(",
          "readFileSync(\`\${__dirname}/.swcrc\`, 'utf-8')",
          ");",
          "// disable .swcrc look-up by SWC core because we're passing in swcJestConfig ourselves.",
          "// If we do not disable this, SWC Core will read .swcrc and won't transform our test files due to "exclude"",
          "if (swcJestConfig.swcrc === undefined) {",
          "swcJestConfig.swcrc = false;",
          "}",
          "// Uncomment if using global setup/teardown files being transformed via swc",
          "// https://nx.dev/packages/jest/documents/overview#global-setup/teardown-with-nx-libraries",
          "// jest needs EsModule Interop to find the default exported setup/teardown functions",
          "// swcJestConfig.module.noInterop = false;",
          "export default {",
          "displayName: 'anchor',",
          "preset: '../jest.preset.js',",
          "transform: {",
          "'^.+\\\\.[tj]s$': ['@swc/jest', swcJestConfig],",
          "},",
          "moduleFileExtensions: ['ts', 'js', 'html'],",
          "testEnvironment: '',",
          "coverageDirectory: '../coverage/anchor',",
          "};",
        ],
        "isBinary": false,
        "path": "./anchor/jest.config.ts",
      },
      "migrations": {
        "children": {
          "deploy.ts": {
            "content": [
              "// Migrations are an early feature. Currently, they're nothing more than this",
              "// single deploy script that's invoked from the CLI, injecting a provider",
              "// configured from the workspace's Anchor.toml.",
              "const anchor = require('@coral-xyz/anchor');",
              "module.exports = async function (provider) {",
              "// Configure client to use the provider.",
              "anchor.setProvider(provider);",
              "// Add your deploy script here.",
              "};",
            ],
            "isBinary": false,
            "path": "./anchor/migrations/deploy.ts",
          },
        },
        "path": "./anchor/migrations",
      },
      "package.json": {
        "content": [
          "{",
          ""name": "@proj/anchor",",
          ""version": "0.0.1",",
          ""dependencies": {},",
          ""type": "commonjs",",
          ""main": "./index.cjs",",
          ""module": "./index.js"",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/package.json",
      },
      "programs": {
        "children": {
          "counter": {
            "children": {
              "Cargo.toml": {
                "content": [
                  "[package]",
                  "name = "counter"",
                  "version = "0.1.0"",
                  "description = "Created with Anchor"",
                  "edition = "2021"",
                  "[lib]",
                  "crate-type = ["cdylib", "lib"]",
                  "name = "counter"",
                  "[features]",
                  "no-entrypoint = []",
                  "no-idl = []",
                  "no-log-ix-name = []",
                  "cpi = ["no-entrypoint"]",
                  "default = []",
                  "[dependencies]",
                  "anchor-lang = "0.28.0"",
                ],
                "isBinary": false,
                "path": "./anchor/programs/counter/Cargo.toml",
              },
              "Xargo.toml": {
                "content": [
                  "[target.bpfel-unknown-unknown.dependencies.std]",
                  "features = []",
                ],
                "isBinary": false,
                "path": "./anchor/programs/counter/Xargo.toml",
              },
              "src": {
                "children": {
                  "lib.rs": {
                    "content": [
                      "#![allow(clippy::result_large_err)]",
                      "use anchor_lang::prelude::*;",
                      "declare_id!("EuJfgknXicf6iZASeagt5U6XDDPpLTQrvWPW31vgAwo8");",
                      "#[program]",
                      "pub mod counter {",
                      "use super::*;",
                      "pub fn initialize_counter(_ctx: Context<InitializeCounter>) -> Result<()> {",
                      "Ok(())",
                      "}",
                      "pub fn increment(ctx: Context<Increment>) -> Result<()> {",
                      "ctx.accounts.counter.count = ctx.accounts.counter.count.checked_add(1).unwrap();",
                      "Ok(())",
                      "}",
                      "}",
                      "#[derive(Accounts)]",
                      "pub struct InitializeCounter<'info> {",
                      "#[account(mut)]",
                      "pub payer: Signer<'info>,",
                      "#[account(",
                      "init,",
                      "space = 8 + Counter::INIT_SPACE,",
                      "payer = payer",
                      ")]",
                      "pub counter: Account<'info, Counter>,",
                      "pub system_program: Program<'info, System>,",
                      "}",
                      "#[derive(Accounts)]",
                      "pub struct Increment<'info> {",
                      "#[account(mut)]",
                      "pub counter: Account<'info, Counter>,",
                      "}",
                      "#[account]",
                      "#[derive(InitSpace)]",
                      "pub struct Counter {",
                      "count: u64,",
                      "}",
                    ],
                    "isBinary": false,
                    "path": "./anchor/programs/counter/src/lib.rs",
                  },
                },
                "path": "./anchor/programs/counter/src",
              },
            },
            "path": "./anchor/programs/counter",
          },
        },
        "path": "./anchor/programs",
      },
      "project.json": {
        "content": [
          "{",
          ""name": "anchor",",
          ""$schema": "../node_modules/nx/schemas/project-schema.json",",
          ""sourceRoot": "anchor/src",",
          ""projectType": "library",",
          ""targets": {",
          ""build": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor build"],",
          ""parallel": false",
          "}",
          "},",
          ""lint": {",
          ""executor": "@nx/eslint:lint",",
          ""outputs": ["{options.outputFile}"],",
          ""options": {",
          ""lintFilePatterns": ["anchor/**/*.ts", "anchor/package.json"]",
          "}",
          "},",
          ""test": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor test"],",
          ""parallel": false",
          "}",
          "},",
          ""clean": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor clean"],",
          ""parallel": false",
          "}",
          "},",
          ""deploy": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor deploy"],",
          ""parallel": false",
          "}",
          "},",
          ""localnet": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor localnet"],",
          ""parallel": false",
          "}",
          "},",
          ""publish": {",
          ""executor": "nx:run-commands",",
          ""options": {",
          ""cwd": "anchor",",
          ""commands": ["anchor publish"],",
          ""parallel": false",
          "}",
          "},",
          ""jest": {",
          ""executor": "@nx/jest:jest",",
          ""outputs": ["{workspaceRoot}/coverage/{projectRoot}"],",
          ""options": {",
          ""jestConfig": "anchor/jest.config.ts",",
          ""passWithNoTests": true",
          "},",
          ""configurations": {",
          ""ci": {",
          ""ci": true,",
          ""codeCoverage": true",
          "}",
          "}",
          "}",
          "},",
          ""tags": []",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/project.json",
      },
      "src": {
        "children": {
          "index.ts": {
            "content": [
              "export * from '../target/types/counter';",
            ],
            "isBinary": false,
            "path": "./anchor/src/index.ts",
          },
        },
        "path": "./anchor/src",
      },
      "target": {
        "children": {
          "types": {
            "children": {
              "counter.ts": {
                "content": [
                  "export type Counter = {",
                  "version: '0.1.0';",
                  "name: 'counter';",
                  "instructions: [",
                  "{",
                  "name: 'initializeCounter';",
                  "accounts: [",
                  "{",
                  "name: 'payer';",
                  "isMut: true;",
                  "isSigner: true;",
                  "},",
                  "{",
                  "name: 'counter';",
                  "isMut: true;",
                  "isSigner: true;",
                  "},",
                  "{",
                  "name: 'systemProgram';",
                  "isMut: false;",
                  "isSigner: false;",
                  "}",
                  "];",
                  "args: [];",
                  "},",
                  "{",
                  "name: 'increment';",
                  "accounts: [",
                  "{",
                  "name: 'counter';",
                  "isMut: true;",
                  "isSigner: false;",
                  "}",
                  "];",
                  "args: [];",
                  "}",
                  "];",
                  "accounts: [",
                  "{",
                  "name: 'counter';",
                  "type: {",
                  "kind: 'struct';",
                  "fields: [",
                  "{",
                  "name: 'count';",
                  "type: 'u64';",
                  "}",
                  "];",
                  "};",
                  "}",
                  "];",
                  "};",
                  "export const IDL: Counter = {",
                  "version: '0.1.0',",
                  "name: 'counter',",
                  "instructions: [",
                  "{",
                  "name: 'initializeCounter',",
                  "accounts: [",
                  "{",
                  "name: 'payer',",
                  "isMut: true,",
                  "isSigner: true,",
                  "},",
                  "{",
                  "name: 'counter',",
                  "isMut: true,",
                  "isSigner: true,",
                  "},",
                  "{",
                  "name: 'systemProgram',",
                  "isMut: false,",
                  "isSigner: false,",
                  "},",
                  "],",
                  "args: [],",
                  "},",
                  "{",
                  "name: 'increment',",
                  "accounts: [",
                  "{",
                  "name: 'counter',",
                  "isMut: true,",
                  "isSigner: false,",
                  "},",
                  "],",
                  "args: [],",
                  "},",
                  "],",
                  "accounts: [",
                  "{",
                  "name: 'counter',",
                  "type: {",
                  "kind: 'struct',",
                  "fields: [",
                  "{",
                  "name: 'count',",
                  "type: 'u64',",
                  "},",
                  "],",
                  "},",
                  "},",
                  "],",
                  "};",
                ],
                "isBinary": false,
                "path": "./anchor/target/types/counter.ts",
              },
            },
            "path": "./anchor/target/types",
          },
        },
        "path": "./anchor/target",
      },
      "tests": {
        "children": {
          "counter.spec.ts": {
            "content": [
              "import * as anchor from '@coral-xyz/anchor';",
              "import { Program } from '@coral-xyz/anchor';",
              "import { Keypair } from '@solana/web3.js';",
              "import { Counter } from '../target/types/counter';",
              "describe('counter', () => {",
              "// Configure the client to use the local cluster.",
              "const provider = anchor.AnchorProvider.env();",
              "anchor.setProvider(provider);",
              "const payer = provider.wallet as anchor.Wallet;",
              "const program = anchor.workspace.Counter as Program<Counter>;",
              "// Generate a new keypair for the counter account",
              "const counterKeypair = new Keypair();",
              "it('Initialize Counter', async () => {",
              "await program.methods",
              ".initializeCounter()",
              ".accounts({",
              "counter: counterKeypair.publicKey,",
              "payer: payer.publicKey,",
              "})",
              ".signers([counterKeypair])",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(0);",
              "});",
              "it('Increment Counter', async () => {",
              "await program.methods",
              ".increment()",
              ".accounts({ counter: counterKeypair.publicKey })",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(1);",
              "});",
              "it('Increment Counter Again', async () => {",
              "await program.methods",
              ".increment()",
              ".accounts({ counter: counterKeypair.publicKey })",
              ".rpc();",
              "const currentCount = await program.account.counter.fetch(",
              "counterKeypair.publicKey",
              ");",
              "expect(currentCount.count.toNumber()).toEqual(2);",
              "});",
              "});",
            ],
            "isBinary": false,
            "path": "./anchor/tests/counter.spec.ts",
          },
        },
        "path": "./anchor/tests",
      },
      "tsconfig.json": {
        "content": [
          "{",
          ""extends": "../tsconfig.base.json",",
          ""compilerOptions": {",
          ""module": "commonjs"",
          "},",
          ""files": [],",
          ""include": [],",
          ""references": [",
          "{",
          ""path": "./tsconfig.lib.json"",
          "},",
          "{",
          ""path": "./tsconfig.spec.json"",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.json",
      },
      "tsconfig.lib.json": {
        "content": [
          "{",
          ""extends": "./tsconfig.json",",
          ""compilerOptions": {",
          ""outDir": "../dist/out-tsc",",
          ""declaration": true,",
          ""types": ["node"]",
          "},",
          ""include": ["src/**/*.ts"],",
          ""exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.lib.json",
      },
      "tsconfig.spec.json": {
        "content": [
          "{",
          ""extends": "./tsconfig.json",",
          ""compilerOptions": {",
          ""outDir": "../dist/out-tsc",",
          ""module": "commonjs",",
          ""types": ["jest", "node"]",
          "},",
          ""include": [",
          ""jest.config.ts",",
          ""src/**/*.test.ts",",
          ""src/**/*.spec.ts",",
          ""src/**/*.d.ts"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./anchor/tsconfig.spec.json",
      },
    },
    "path": "./anchor",
  },
  "jest.config.ts": {
    "content": [
      "import { getJestProjects } from '@nx/jest';",
      "export default {",
      "projects: getJestProjects(),",
      "};",
    ],
    "isBinary": false,
    "path": "./jest.config.ts",
  },
  "jest.preset.js": {
    "content": [
      "const nxPreset = require('@nx/jest/preset').default;",
      "module.exports = { ...nxPreset };",
    ],
    "isBinary": false,
    "path": "./jest.preset.js",
  },
  "nx.json": {
    "content": [
      "{",
      ""affected": {",
      ""defaultBase": "main"",
      "},",
      ""targetDefaults": {",
      ""build": {",
      ""cache": true",
      "},",
      ""lint": {",
      ""cache": true,",
      ""inputs": [",
      ""default",",
      ""{workspaceRoot}/.eslintrc.json",",
      ""{workspaceRoot}/.eslintignore",",
      ""{workspaceRoot}/eslint.config.js"",
      "]",
      "},",
      ""test": {",
      ""cache": true,",
      ""inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]",
      "},",
      ""e2e": {",
      ""cache": true",
      "}",
      "},",
      ""generators": {",
      ""@nx/react": {",
      ""application": {",
      ""babel": true",
      "}",
      "},",
      ""@nx/next": {",
      ""application": {",
      ""style": "css",",
      ""linter": "eslint"",
      "}",
      "}",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./nx.json",
  },
  "package.json": {
    "content": [
      "{",
      ""name": "@proj/source",",
      ""dependencies": {",
      ""@coral-xyz/anchor": "^0.29.0",",
      ""@solana/wallet-adapter-base": "^0.9.23",",
      ""@solana/wallet-adapter-react": "^0.15.35",",
      ""@solana/wallet-adapter-react-ui": "^0.9.34",",
      ""@solana/wallet-adapter-solflare": "^0.6.28",",
      ""@solana/wallet-adapter-unsafe-burner": "^0.1.7",",
      ""@solana/web3.js": "1.87.2",",
      ""@swc/helpers": "~0.5.2",",
      ""@tailwindcss/typography": "0.5.10",",
      ""bs58": "5.0.0",",
      ""daisyui": "3.9.3",",
      ""encoding": "0.1.13",",
      ""next": "13.4.1",",
      ""react": "18.2.0",",
      ""react-dom": "18.2.0",",
      ""tslib": "^2.3.0"",
      "},",
      ""devDependencies": {",
      ""@nx/eslint": "17.0.3",",
      ""@nx/eslint-plugin": "17.0.3",",
      ""@nx/jest": "17.0.1",",
      ""@nx/js": "17.0.3",",
      ""@nx/next": "17.0.3",",
      ""@nx/react": "17.0.3",",
      ""@nx/rollup": "17.0.1",",
      ""@swc-node/register": "~1.6.7",",
      ""@swc/cli": "~0.1.62",",
      ""@swc/core": "~1.3.85",",
      ""@swc/jest": "0.2.20",",
      ""@testing-library/react": "14.0.0",",
      ""@types/jest": "^29.4.0",",
      ""@types/node": "18.14.2",",
      ""@types/react": "18.2.33",",
      ""@types/react-dom": "18.2.14",",
      ""@typescript-eslint/eslint-plugin": "^5.60.1",",
      ""@typescript-eslint/parser": "^5.60.1",",
      ""autoprefixer": "10.4.13",",
      ""eslint": "~8.46.0",",
      ""eslint-config-next": "13.4.1",",
      ""eslint-config-prettier": "^9.0.0",",
      ""eslint-plugin-import": "2.27.5",",
      ""eslint-plugin-jsx-a11y": "6.7.1",",
      ""eslint-plugin-react": "7.32.2",",
      ""eslint-plugin-react-hooks": "4.6.0",",
      ""jest": "^29.4.1",",
      ""jest-environment-jsdom": "^29.4.1",",
      ""postcss": "8.4.21",",
      ""prettier": "^2.6.2",",
      ""tailwindcss": "3.2.7",",
      ""ts-jest": "^29.1.0",",
      ""ts-node": "10.9.1",",
      ""typescript": "~5.1.3"",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./package.json",
  },
  "test-app": {
    "children": {
      ".eslintrc.json": {
        "content": [
          "{",
          ""extends": [",
          ""plugin:@nx/react-typescript",",
          ""next",",
          ""next/core-web-vitals",",
          ""../.eslintrc.json"",
          "],",
          ""ignorePatterns": ["!**/*", ".next/**/*"],",
          ""overrides": [",
          "{",
          ""files": ["*.*"],",
          ""rules": {",
          ""@next/next/no-html-link-for-pages": "off"",
          "}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx", "*.js", "*.jsx"],",
          ""rules": {",
          ""@next/next/no-html-link-for-pages": ["error", "test-app/pages"]",
          "}",
          "},",
          "{",
          ""files": ["*.ts", "*.tsx"],",
          ""rules": {}",
          "},",
          "{",
          ""files": ["*.js", "*.jsx"],",
          ""rules": {}",
          "}",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/.eslintrc.json",
      },
      "app": {
        "children": {
          "api": {
            "children": {
              "hello": {
                "children": {
                  "route.ts": {
                    "content": [
                      "export async function GET(request: Request) {",
                      "return new Response('Hello, from API!');",
                      "}",
                    ],
                    "isBinary": false,
                    "path": "./test-app/app/api/hello/route.ts",
                  },
                },
                "path": "./test-app/app/api/hello",
              },
            },
            "path": "./test-app/app/api",
          },
          "app-layout.tsx": {
            "content": [
              "'use client';",
              "import { ReactNode } from 'react';",
              "import Link from 'next/link';",
              "import dynamic from 'next/dynamic';",
              "const WalletMultiButton = dynamic(",
              "async () =>",
              "(await import('@solana/wallet-adapter-react-ui')).WalletMultiButton,",
              "{ ssr: false }",
              ");",
              "export function AppLayout({ children }: { children: ReactNode }) {",
              "const { pathname } = { pathname: '' };",
              "const pages = [",
              "{ label: 'Airdrop', path: '/airdrop' },",
              "{ label: 'Page 1', path: '/page-1' },",
              "{ label: 'Page 2', path: '/page-2' },",
              "];",
              "return (",
              "<div className="h-full flex flex-col">",
              "<div className="navbar bg-base-300 text-neutral-content">",
              "<div className="flex-1">",
              "<Link href="/" className="btn btn-ghost normal-case text-xl">",
              "@solana-developers/preset-next",
              "</Link>",
              "<ul className="menu menu-horizontal px-1">",
              "{pages.map(({ label, path }) => (",
              "<li key={path}>",
              "<Link",
              "className={pathname.startsWith(path) ? 'active' : ''}",
              "href={path}",
              ">",
              "{label}",
              "</Link>",
              "</li>",
              "))}",
              "</ul>",
              "</div>",
              "<div className="flex-none">",
              "<WalletMultiButton />",
              "</div>",
              "</div>",
              "<div className="flex-grow">{children}</div>",
              "<footer className="footer footer-center p-4 bg-base-300 text-base-content">",
              "<aside>",
              "<p>Generated with @solana-developers/preset-next@0.0.1</p>",
              "</aside>",
              "</footer>",
              "</div>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/app-layout.tsx",
          },
          "global.css": {
            "content": [
              "@tailwind base;",
              "@tailwind components;",
              "@tailwind utilities;",
              "html,",
              "body {",
              "height: 100%;",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/global.css",
          },
          "layout.tsx": {
            "content": [
              "import './global.css';",
              "import { AppLayout } from './app-layout';",
              "import { SolanaProvider } from './solana-provider';",
              "export const metadata = {",
              "title: 'Welcome to test-app',",
              "description: 'Generated by @solana-developers/preset-next@0.0.1',",
              "};",
              "export default function RootLayout({",
              "children,",
              "}: {",
              "children: React.ReactNode;",
              "}) {",
              "return (",
              "<html lang="en">",
              "<body>",
              "<SolanaProvider>",
              "<AppLayout>{children}</AppLayout>",
              "</SolanaProvider>",
              "</body>",
              "</html>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/layout.tsx",
          },
          "page.module.css": {
            "content": [
              ".page {",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/page.module.css",
          },
          "page.tsx": {
            "content": [
              "import { IDL } from '@proj/anchor';",
              "export default async function Index() {",
              "return (",
              "<div>",
              "<pre>{JSON.stringify(IDL, null, 2)}</pre>",
              "</div>",
              ");",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/page.tsx",
          },
          "solana-provider.tsx": {
            "content": [
              "'use client';",
              "import { WalletError } from '@solana/wallet-adapter-base';",
              "import {",
              "ConnectionProvider,",
              "WalletProvider,",
              "} from '@solana/wallet-adapter-react';",
              "import { WalletModalProvider } from '@solana/wallet-adapter-react-ui';",
              "import { SolflareWalletAdapter } from '@solana/wallet-adapter-solflare';",
              "import { UnsafeBurnerWalletAdapter } from '@solana/wallet-adapter-unsafe-burner';",
              "import { Cluster, clusterApiUrl } from '@solana/web3.js';",
              "import {",
              "createContext,",
              "ReactNode,",
              "useCallback,",
              "useContext,",
              "useMemo,",
              "useState,",
              "} from 'react';",
              "require('@solana/wallet-adapter-react-ui/styles.css');",
              "export interface SolanaProviderContext {",
              "cluster: Cluster;",
              "endpoint: string;",
              "setCluster?: (cluster: Cluster) => void;",
              "}",
              "const Context = createContext<SolanaProviderContext>(",
              "{} as SolanaProviderContext",
              ");",
              "export function SolanaProvider({ children }: { children: ReactNode }) {",
              "const [cluster, setCluster] = useState<Cluster>('devnet');",
              "const endpoint = useMemo(() => clusterApiUrl(cluster), [cluster]);",
              "const wallets = useMemo(",
              "() => [new UnsafeBurnerWalletAdapter(), new SolflareWalletAdapter()],",
              "[cluster]",
              ");",
              "const onError = useCallback((error: WalletError) => {",
              "console.error(error);",
              "}, []);",
              "const value: SolanaProviderContext = {",
              "cluster,",
              "endpoint,",
              "setCluster,",
              "};",
              "return (",
              "<ConnectionProvider endpoint={endpoint}>",
              "<WalletProvider wallets={wallets} onError={onError} autoConnect={true}>",
              "<WalletModalProvider>",
              "<Context.Provider value={value}>{children}</Context.Provider>",
              "</WalletModalProvider>",
              "</WalletProvider>",
              "</ConnectionProvider>",
              ");",
              "}",
              "export function useSolana() {",
              "return useContext(Context);",
              "}",
            ],
            "isBinary": false,
            "path": "./test-app/app/solana-provider.tsx",
          },
        },
        "path": "./test-app/app",
      },
      "index.d.ts": {
        "content": [
          "/* eslint-disable @typescript-eslint/no-explicit-any */",
          "declare module '*.svg' {",
          "const content: any;",
          "export const ReactComponent: any;",
          "export default content;",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/index.d.ts",
      },
      "next-env.d.ts": {
        "content": [
          "/// <reference types="next" />",
          "/// <reference types="next/image-types/global" />",
          "// NOTE: This file should not be edited",
          "// see https://nextjs.org/docs/basic-features/typescript for more information.",
        ],
        "isBinary": false,
        "path": "./test-app/next-env.d.ts",
      },
      "next.config.js": {
        "content": [
          "//@ts-check",
          "// eslint-disable-next-line @typescript-eslint/no-var-requires",
          "const { composePlugins, withNx } = require('@nx/next');",
          "/**",
          "* @type {import('@nx/next/plugins/with-nx').WithNxOptions}",
          "**/",
          "const nextConfig = {",
          "nx: {",
          "// Set this to true if you would like to use SVGR",
          "// See: https://github.com/gregberge/svgr",
          "svgr: false,",
          "},",
          "};",
          "const plugins = [",
          "// Add more Next.js plugins to this list if needed.",
          "withNx,",
          "];",
          "module.exports = composePlugins(...plugins)(nextConfig);",
        ],
        "isBinary": false,
        "path": "./test-app/next.config.js",
      },
      "postcss.config.js": {
        "content": [
          "const { join } = require('path');",
          "// Note: If you use library-specific PostCSS/Tailwind configuration then you should remove the \`postcssConfig\` build",
          "// option from your application's configuration (i.e. project.json).",
          "//",
          "// See: https://nx.dev/guides/using-tailwind-css-in-react#step-4:-applying-configuration-to-libraries",
          "module.exports = {",
          "plugins: {",
          "tailwindcss: {",
          "config: join(__dirname, 'tailwind.config.js'),",
          "},",
          "autoprefixer: {},",
          "},",
          "};",
        ],
        "isBinary": false,
        "path": "./test-app/postcss.config.js",
      },
      "project.json": {
        "content": [
          "{",
          ""name": "test-app",",
          ""$schema": "../node_modules/nx/schemas/project-schema.json",",
          ""sourceRoot": "test-app",",
          ""projectType": "application",",
          ""targets": {",
          ""build": {",
          ""executor": "@nx/next:build",",
          ""outputs": ["{options.outputPath}"],",
          ""defaultConfiguration": "production",",
          ""options": {",
          ""outputPath": "dist/test-app"",
          "},",
          ""configurations": {",
          ""development": {",
          ""outputPath": "test-app"",
          "},",
          ""production": {}",
          "}",
          "},",
          ""serve": {",
          ""executor": "@nx/next:server",",
          ""defaultConfiguration": "development",",
          ""options": {",
          ""buildTarget": "test-app:build",",
          ""dev": true,",
          ""port": 3000",
          "},",
          ""configurations": {",
          ""development": {",
          ""buildTarget": "test-app:build:development",",
          ""dev": true",
          "},",
          ""production": {",
          ""buildTarget": "test-app:build:production",",
          ""dev": false",
          "}",
          "}",
          "},",
          ""export": {",
          ""executor": "@nx/next:export",",
          ""options": {",
          ""buildTarget": "test-app:build:production"",
          "}",
          "},",
          ""lint": {",
          ""executor": "@nx/eslint:lint",",
          ""outputs": ["{options.outputFile}"],",
          ""options": {",
          ""lintFilePatterns": ["test-app/**/*.{ts,tsx,js,jsx}"]",
          "}",
          "}",
          "},",
          ""tags": []",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/project.json",
      },
      "public": {
        "children": {
          ".gitkeep": {
            "content": [],
            "isBinary": false,
            "path": "./test-app/public/.gitkeep",
          },
          "favicon.ico": {
            "content": null,
            "isBinary": true,
            "path": "./test-app/public/favicon.ico",
          },
          "solana-logo.png": {
            "content": null,
            "isBinary": true,
            "path": "./test-app/public/solana-logo.png",
          },
        },
        "path": "./test-app/public",
      },
      "tailwind.config.js": {
        "content": [
          "const { createGlobPatternsForDependencies } = require('@nx/react/tailwind');",
          "const { join } = require('path');",
          "/** @type {import('tailwindcss').Config} */",
          "module.exports = {",
          "content: [",
          "join(",
          "__dirname,",
          "'{src,pages,components,app}/**/*!(*.stories|*.spec).{ts,tsx,html}'",
          "),",
          "...createGlobPatternsForDependencies(__dirname),",
          "],",
          "theme: {",
          "extend: {},",
          "},",
          "plugins: [require('daisyui')],",
          "};",
        ],
        "isBinary": false,
        "path": "./test-app/tailwind.config.js",
      },
      "tsconfig.json": {
        "content": [
          "{",
          ""extends": "../tsconfig.base.json",",
          ""compilerOptions": {",
          ""jsx": "preserve",",
          ""allowJs": true,",
          ""esModuleInterop": true,",
          ""allowSyntheticDefaultImports": true,",
          ""strict": true,",
          ""forceConsistentCasingInFileNames": true,",
          ""noEmit": true,",
          ""resolveJsonModule": true,",
          ""isolatedModules": true,",
          ""incremental": true,",
          ""plugins": [{ "name": "next" }]",
          "},",
          ""include": [",
          ""**/*.ts",",
          ""**/*.tsx",",
          ""**/*.js",",
          ""**/*.jsx",",
          ""../test-app/.next/types/**/*.ts",",
          ""../dist/test-app/.next/types/**/*.ts",",
          ""next-env.d.ts"",
          "],",
          ""exclude": [",
          ""node_modules",",
          ""jest.config.ts",",
          ""src/**/*.spec.ts",",
          ""src/**/*.test.ts"",
          "]",
          "}",
        ],
        "isBinary": false,
        "path": "./test-app/tsconfig.json",
      },
    },
    "path": "./test-app",
  },
  "tsconfig.base.json": {
    "content": [
      "{",
      ""compilerOptions": {",
      ""paths": {",
      ""@proj/anchor": ["anchor/src/index.ts"]",
      "}",
      "}",
      "}",
    ],
    "isBinary": false,
    "path": "./tsconfig.base.json",
  },
}
`;
